--- a/index.html
+++ b/index.html
@@ -15,3 +15,15 @@
 
 </body>
 </html>
+
+
+
+<!--
+On veut créer une page HTML reliée à une feuille CSS
+dans laquelle nous auront une section
+qui contiendra 4 div vides
+- La section sera: rose, elle prendra toute la hauteur de la page,
+elle fera la moitié de la page en largeur et elle sera centré
+- Les div seront violettes, de taille identique (largeur, hauteur),
+elles seront alignées horizontalement, elles seront centrées dans la section
+-->
