--- a/index2.html
+++ b/index2.html
@@ -9,10 +9,20 @@
 <body>
     <section>
         <div class="boxbGPurpel"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+        <div class="boxbGYellow"></div>
+        <div class="boxbGGreen"></div>
+        <div class="boxbGYellow"></div>
     </section>
    
+    
+<section>
+    <h2>jouons avec des boutons</h2>
+    <a href="" class="bouton bordure-pleine">Clique moi dessus</a>
+    <a href="" class="bouton border-dashed">Clique moi dessus</a>
+    <a href="" class="bouton backgroung-green border-radius-32">Clique moi dessus</a>
+    <a href="" class="bouton backgroung-green">Clique moi dessus</a>
+    <a href="" class="bouton background-blue ">Visiter le lieu</a>
+    <a href="" class="bouton background-blue border-radius-32">Visiter le lieu</a>
+   </section>
 </body>
 </html>
