--- a/index2.html
+++ b/index2.html
@@ -24,5 +24,14 @@
     <a href="" class="bouton background-blue ">Visiter le lieu</a>
     <a href="" class="bouton background-blue border-radius-32">Visiter le lieu</a>
    </section>
+      <!-- Le code de la petite carte -->
+      <div class="card">
+        <img src="./assets/voyage.jpg" alt="">
+        <h3>Titre de la carte</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum numquam iste nulla ad! Doloribus similique expedita mollitia, consequuntur quasi obcaecati quidem sequi assumenda sunt, hic laborum rerum dolorum quisquam officia.</p>
+        <a href="" class="bouton bg-blue radius-8 text-white inter-small">Visiter le lieu</a>
+        
+    </div>
+    
 </body>
 </html>
